_sass/template.scss
@mixin HFBkgdStyle {
    margin: {
        left: auto;
        right: auto;
    }
    width: calc(100% - (16px * 2));

    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
}

html { min-height: 100%; margin: 0; font-size: larger; }
body { min-width: 800px; min-height: 600px; margin: 0px; font-family: 'Noto Sans KR', sans-serif; visibility: hidden; }
main { overflow-y: hidden; }
a { text-decoration: none; color: #239BF1; }
pre {
    font-family: $MONOSPACE;
    text-rendering: geometricPrecision;
}   
code {
    font-family: $MONOSPACE;
    border-radius: 0.2em;
    padding: 0 0.2em;
    word-break: initial;
}
.highlighter-rouge {
    pre {
        border-radius: 8px;
        padding: 0.5em 1em;
        overflow-x: auto;
    }
    code {
        padding: 0px;
    }
}
.mjx-chtml, .MathJax_CHTML {
    .MJXc-TeX-unknown-R
    {
        font-family: 'GulimChe';
        font-weight: bold;
        text-rendering: optimizeLegibility;
    }
}
h1, h2, h3, h4 { font-family: $TITLEFONT; }
header {
    @include HFBkgdStyle;
    display: flex;
    flex-direction: column;
    padding: 24px 0px;
    border-bottom: {
        left-radius: 32px;
        right-radius: 32px;
    }
    nav {
        $ICON_SIZE: 48px;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        width: calc(100% - (16px * 2));
        height: $ICON_SIZE;
        margin: auto;
        a {
            $MARGIN-SIZE: 8px;
            margin: {
                left: $MARGIN-SIZE;
                right: $MARGIN-SIZE;
            }
        }
        .nav-button {
            display: inline-flex;    
            align-content: center;
            cursor: pointer;
            height: $ICON_SIZE;
            width: $ICON_SIZE;
            background: {
                position: center;
                repeat: no-repeat;
                size: $ICON_SIZE;
            }
        }
        #nav-home   { background-image:url('/images/icons/icon-home.png'); }
        #nav-lang   { background-image:url('/images/icons/icon-language.png'); }
        #nav-theme  { background-image:url('/images/icons/icon-theme.png'); }
        #nav-github { background-image:url('/images/icons/icon-github.png'); }

        #nav-left, #nav-right {
            display: inline-block;
            white-space: nowrap;
            align-self: center;
        }
        #nav-center {
            text-align: center;
            padding: 0 0.4em;
            font: {
                family: Verdana, Geneva, Tahoma, sans-serif;
                size: $ICON_SIZE - 8px;
                weight: bold;
            }
        }
    }
    #idx-title {
        display: flex;
        width: fit-content;
        height: 128px;
        text-align: center;
        align-self: center;
        padding: {
            top: 8px;
            bottom: 8px;
        }
        font: {
            weight: bolder;
            family: 'JetBrains Mono';
            size: 96px;
        }
        span {
            border: {
                style: solid;
                width: 8px;
            }
    
            // Letter affects right padding.
            letter-spacing: 8px;
            padding: 0px 0px 0px 10px;
        }
    }
}
footer {
    @include HFBkgdStyle;
    height: 20px;
    position: relative;
    text-align: center;
    border-top: {
        left-radius: 32px;
        right-radius: 32px; 
    }
    padding: {
        top: 4px;
        bottom: 4px;
    }
    font: {
        size: 16px;
        weight: bold;
        family: 'JetBrains Mono';
    }
}
::-webkit-scrollbar {
    width: 12px;
    height: 12px;  
}
::-webkit-scrollbar-thumb {
    background: #808080;
    border-radius: 4px;
}
::-webkit-scrollbar-track {
    background: #404040;
}

html {
    body {
        background-color: #F2F2F2;
        color: #000000;
    }
    header, footer {
        background-color: #868686;
        color: #000000;
    }
    code { 
        background-color: #CDCDCD; 
    }
    .highlighter-rouge {
        code {
            background-color: transparent;
            color: white;
        }
    }
    .nav-button {
        filter: invert(0%);
    }
&:not(.style-scope)[dark] {
    body {
        background-color: #202020;
        color: #FFFFFF;
    }
    header, footer {
        background-color: #101010;
        color: #FFFFFF;
    }
    code { 
        background-color: #303030; 
    }
    .highlighter-rouge {
        code {
            background-color: transparent;
            color: white;
        }
    }
    .nav-button {
        filter: invert(100%);
    }
}}

